# drpc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench_balance.rs  bench_bincode.rs  bench_serde.rs  latency.rs
doc/: detail.md
example/: Cargo.toml
example/src/: main.rs  main_bincode.rs  main_bson.rs  main_json.rs  main_set_frame_size.rs  redis_registry.rs
src/: balance.rs  balance_manager.rs  client.rs  codec.rs  frame.rs  lib.rs  server.rs  sink.rs  stub.rs  transport.rs
tests/: balance.rs  balance_manager.rs  frame.rs
