[workspace]
members = [
    "example"
]

[package]
name = "drpc"
version = "0.1.12"
edition = "2021"
description = "Rust High Performance Async RPC Framework"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
documentation = "https://github.com/darkrpc/drpc"
repository = "https://github.com/darkrpc/drpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
log = "0.4"
rand = "0.8"
dark-std = "0.1"
async-trait = "0.1"
futures = "0.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1